Debug plugin style and collapse fixes

--- a/plugin/debug/asset/debug.scss
+++ b/plugin/debug/asset/debug.scss
@@ -61,6 +61,9 @@ section.deft-debug {
 		position: relative;
 		min-height: 100px;
 		overflow: hidden;
+		&:empty {
+			background-color: #252525;
+		}
 		> div {
 			display: block;
 			position: absolute;
@@ -77,6 +80,8 @@ section.deft-debug {
 	h2 {
 		margin: 0;
 		padding:  0;
+		font-size: 2.25em;
+		font-weight: 400;
 	}
 
 	h3, h4 {
@@ -118,6 +123,7 @@ section.deft-debug {
 		&.expanded {
 			div.detail {
 				display: block;
+				overflow-x: scroll;
 			}
 		}
 
